# aws-lambda-stock-daily

./: .gitignore  Dockerfile  README.md  build_docker_image.sh  pyproject.toml  requirements.txt
config/: config.json
src/aws_lambda_alpaca_daily/: csv_utils.py  data_sources.py  email_utils.py  feature_extractors.py  lambda_function.py  storage.py
tests/: test_csv_utils.py  test_data_sources.py  test_email_utils.py  test_lambda_function.py  test_storage.py
